Fixed wrong wrapping.

--- a/doc/documentation.css
+++ b/doc/documentation.css
@@ -628,7 +628,7 @@ pre.screen {
     padding: 10px 15px;
     font-size: 12px;
     margin: 10px 0px;
-    white-space: word-wrap;
+    white-space: pre-wrap;
     line-height: 150%;
     border: 1px solid #aaa;
     border-top: 0px;
@@ -642,7 +642,7 @@ pre.programlisting {
     padding: 10px 15px;
     font-size: 13px;
     margin: 10px 0px;
-    white-space: word-wrap;
+    white-space: pre-wrap;
     line-height: 150%;
     border: 1px solid #aaa;
     border-top: 0px;
